--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@testing-library/react-native": "11.0.0",
@@ -18,7 +19,12 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-promise": "^0.6.0",
+    "redux-saga": "^1.2.2",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,23 +32,28 @@
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
+    "axios": "^1.3.3",
     "babel-jest": "^29.2.1",
     "detox": "^20.1.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "eslint": "^8.19.0",
     "eslint-plugin-detox": "1.0.0",
     "jest": "^29.2.1",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "^18.2.0",
-    "typescript": "4.8.4",
-    "axios": "^1.3.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.7",
-    "jest-environment-enzyme": "^7.1.2",
-    "jest-enzyme": "^7.1.2"
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native",
-    "setupFilesAfterEnv": ["<rootDir>setup.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
+    ]
   }
 }
